# udp-firmware-uploader

./: CMakeLists.txt  README.md  main.c  sender.c  temp.cpp
include/: file.h  main.h  packet.h  socket.h  timer.h  utils.h
src/: file.c  packet.c  socket.c  timer.c  utils.c
